Cambios config bbdd, S3 y gest. alojamientos

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -26,7 +26,12 @@
 							<ul class="dropdown-menu">
 								<li>
 									<a class="dropdown-item" th:href="@{/gestion/usuarios/lista}">
-										<i class="fa-solid fa-video"></i> Usuarios
+										<i class="fa-solid fa-user"></i> Usuarios
+									</a>
+								</li>
+								<li>
+									<a class="dropdown-item" th:href="@{/gestion/alojamientos/lista}">
+										<i class="fa-solid fa-home"></i> Alojamientos
 									</a>
 								</li>
 							</ul>
