--- a/src/main/resources/static/css/gestor.css
+++ b/src/main/resources/static/css/gestor.css
@@ -4,3 +4,10 @@
 	margin-bottom: 64px;  /* Espacio reservado para el menú superior e inferior "position:fixed" */
 	overflow: auto;
 }
+
+#map {
+    width: 100%;
+    height: 500px; /* o la altura que quieras */
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+  }
