Comienzo de funcionalidad gestión de temporadas

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -34,6 +34,11 @@
 										<i class="fa-solid fa-home"></i> Alojamientos
 									</a>
 								</li>
+								<li>
+									<a class="dropdown-item" th:href="@{/gestion/temporadas/lista}">
+										<i class="fa-solid fa-calendar-days"></i> Temporadas
+									</a>
+								</li>
 							</ul>
 						</li>
 					</div>
