--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -2,24 +2,23 @@
 <body>
 
 <th:block th:fragment="scripts">
-    <!-- Bootstrap https://getbootstrap.com/ -->
+
+	<!-- Popper (para Bootstrap y Tempus Dominus) -->
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+
+	<!-- Bootstrap Bundle -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
-    <!-- DataTables https://datatables.net/ -->
+	<!-- DataTables -->
 	<script src="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-2.0.2/datatables.min.js"></script>
-    
-    <!-- Tempus Dominus https://getdatepicker.com/ -->
+
+	<!-- Tempus Dominus -->
 	<script src="https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.9.4/dist/js/tempus-dominus.min.js" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.9.4/dist/locales/es.js" crossorigin="anonymous"></script>
 
-    <!-- @popperjs/core Librería necesaria para posicionar popups. Esencial para Tempus Dominus v6 para posicionar el datePicker. -->
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-
-    
-	
 </th:block>
 
 </body>
