--- a/src/main/resources/templates/gestion/reservas/detalle.html
+++ b/src/main/resources/templates/gestion/reservas/detalle.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<th:block th:replace="~{fragments/head :: head ('Temporada')}"></th:block>
+	<th:block th:replace="~{fragments/head :: head ('Reserva')}"></th:block>
 </head>
 <body>
 
@@ -10,8 +10,8 @@
 	 <section class="container contenido">
 
         <h1> 
-			<i class="fa-solid fa-calendar-days text-secondary"></i> Temporada 
-			<small th:if="${temporada.id != null}" class="text-secondary" th:text="${temporada.nombre}"></small> 
+			<i class="fa-solid fa-calendar-days text-secondary"></i> Reserva 
+			<small th:if="${reserva.id != null}" class="text-secondary" th:text="${reserva.cliente.nombre}"></small> 
 		</h1>
 
         <div th:replace="~{fragments/mensajes :: mensajes-alerta (mensajeUsuario=${mensajeUsuario})}"></div>
@@ -20,15 +20,27 @@
 
             <section class="container my-3">
                 
-                <form th:action="${temporada.id == null} ? 'nuevo' : 'editar'" method="post" th:object="${temporada}">
+                <form th:action="${reserva.id == null} ? 'nuevo' : 'editar'" method="post" th:object="${reserva}">
 
                     <input type="hidden" name="id" th:field="*{id}" />
 
                     <div class="mb-3 row">
-                        <label class="col-sm-2 col-form-label">Nombre <span class="text-danger">*</span></label>
+                        <label class="col-sm-2 col-form-label">Cliente <span class="text-danger">*</span></label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="nombre" th:field="*{nombre}" th:errorclass="is-invalid" />
-                            <small th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" th:errorclass="text-danger"></small>
+                            <select id="clienteSelect" class="form-select" th:field="*{clienteId}">
+                                <option value="">Seleccione un cliente...</option>
+                                <option th:each="c : ${clientes}" th:value="${c.id}" th:text="${c.nombre}"></option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="mb-3 row">
+                        <label class="col-sm-2 col-form-label">Alojamiento <span class="text-danger">*</span></label>
+                        <div class="col-sm-10">
+                            <select id="alojamientoSelect" class="form-select" th:field="*{alojamientoId}">
+                                <option value="">Seleccione alojamiento...</option>
+                                <option th:each="a : ${alojamientos}" th:value="${a.id}" th:text="${a.nombre}"></option>
+                            </select>
                         </div>
                     </div>
 
@@ -58,21 +70,18 @@
                         </div>
                     </div>
 
+
                     <div class="mb-3 row">
-                        <label class="col-sm-2 col-form-label">Precio (€) <span class="text-danger">*</span></label>
-                        <div class="col-sm-10">
-                            <input type="number" step="0.01" class="form-control" th:field="*{precio}" th:errorclass="is-invalid"/>
-                            <small th:if="${#fields.hasErrors('precio')}" th:errors="*{precio}" class="text-danger"></small>
+                        <label class="col-sm-2 col-form-label">Personas</label>
+                        <div class="col-sm-4">
+                            <input type="number" min="1" class="form-control" th:field="*{numeroPersonas}"/>
                         </div>
                     </div>
 
                     <div class="mb-3 row">
-                        <label class="col-sm-2 col-form-label">Alojamiento <span class="text-danger">*</span></label>
-                        <div class="col-sm-10">
-                            <select class="form-select" th:field="*{alojamiento}" th:errorclass="is-invalid">
-                                <option th:each="a : ${alojamientos}" th:value="${a.id}" th:text="${a.nombre}"></option>
-                            </select>
-                            <small th:if="${#fields.hasErrors('alojamiento')}" th:errors="*{alojamiento}" class="text-danger"></small>
+                        <label class="col-sm-2 col-form-label">Total (€)</label>
+                        <div class="col-sm-4">
+                            <input type="text" class="form-control" th:field="*{total}" id="totalInput" readonly/>
                         </div>
                     </div>
 
@@ -96,7 +105,7 @@
 
 	<th:block th:replace="~{fragments/scripts :: scripts}"></th:block>
 
-    <script type="module" th:src="@{/js/gestion/temporadas/temporadas.js}"></script>
+    <script type="module" th:src="@{/js/gestion/reservas/reservas.js}"></script>
 
     
 </body>
