--- a/src/main/resources/templates/gestion/reservas/lista.html
+++ b/src/main/resources/templates/gestion/reservas/lista.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<th:block th:replace="~{fragments/head :: head ('Temporadas')}"></th:block>
+	<th:block th:replace="~{fragments/head :: head ('Reservas')}"></th:block>
 </head>
 <body>
 
@@ -10,34 +10,36 @@
     <section class="container contenido">
 
         <h1 class="mb-4">
-            <i class="fa-solid fa-calendar-days text-secondary"></i> Temporadas 
-            <a class="btn btn-success btn-sm me-2" title="Nueva Temporada" th:href="@{/gestion/temporadas/detalle}"><i class="fa-solid fa-plus"></i></a>
+            <i class="fa-solid fa-calendar-days text-secondary"></i> Reservas 
+            <a class="btn btn-success btn-sm me-2" title="Nueva Reserva" th:href="@{/gestion/reservas/detalle}"><i class="fa-solid fa-plus"></i></a>
         </h1>
 
         <div th:replace="~{fragments/mensajes :: mensajes-alerta (mensajeUsuario=${mensajeUsuario})}"></div>
         
-        <table id="tablaTemporadas" class="table table-sm table-striped table-hover" style="width:100%">
+        <table id="tablaReservas" class="table table-sm table-striped table-hover" style="width:100%">
             <thead>
                 <tr>
-                    <th>Nombre</th>
+                    <th>Cliente</th>
                     <th>Alojamiento</th>
                     <th>Fecha Inicio</th>
                     <th>Fecha Fin</th>
-                    <th>Precio</th>
+                    <th>Número Personas</th>
+                    <th>Estado</th>
                     <th class="dt-right" data-dt-order="disable">Acciones</th>
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="temporada : ${temporadas}">
-                    <td th:text="${temporada.nombre}"></td>
-                    <td th:text="${temporada.alojamiento.nombre}"></td>
-                    <td th:text="${temporada.fechaInicio}"></td>
-                    <td th:text="${temporada.fechaFin}"></td>
-                    <td th:text="${temporada.precio}"></td>
+                <tr th:each="reserva : ${reservas}">
+                    <td th:text="${reserva.cliente.nombre}"></td>
+                    <td th:text="${reserva.alojamiento.nombre}"></td>
+                    <td th:text="${reserva.fechaInicio}"></td>
+                    <td th:text="${reserva.fechaFin}"></td>
+                    <td th:text="${reserva.numeroPersonas}"></td>
+                    <td th:text="${reserva.estado}"></td>
                     <td class="dt-right">
                         <div class="btn-group btn-group-sm">
-                            <button type="button" class="btn btn-outline-primary" title="Editar" data-accion="editar" th:data-id="${temporada.id}"><i class="fa-solid fa-pen"></i></button>
-                            <button type="button" class="btn btn-outline-danger" title="Eliminar" data-accion="eliminar" th:data-id="${temporada.id}"><i class="fa-solid fa-trash"></i></button>
+                            <button type="button" class="btn btn-outline-primary" title="Editar" data-accion="editar" th:data-id="${reserva.id}"><i class="fa-solid fa-pen"></i></button>
+                            <button type="button" class="btn btn-outline-danger" title="Eliminar" data-accion="eliminar" th:data-id="${reserva.id}"><i class="fa-solid fa-trash"></i></button>
                         </div>
                     </td>
                 </tr>
@@ -56,14 +58,14 @@
 
         document.addEventListener('DOMContentLoaded', () => {
             
-            let dt = new DataTable('#tablaTemporadas', {
+            let dt = new DataTable('#tablaReservas', {
                 language: {
                     url: '[[@{/js/datatables/es-ES.json}]]',
                 },
             });
 
             // Botonera
-            document.getElementById('tablaTemporadas').addEventListener('click', evt => {
+            document.getElementById('tablaReservas').addEventListener('click', evt => {
                 const node = evt.composedPath().find(n => n.dataset && 'id' in n.dataset && 'accion' in n.dataset);
                 if (node) {
                     const {id, accion} = node.dataset;
@@ -71,7 +73,7 @@
                         const searchParams = new URLSearchParams({ id: id });
                         window.location.assign('detalle?'+searchParams.toString());
                     } else if (accion == 'eliminar') {
-                        ui.mostrarConfirmacionModal('Aviso', `La temporada será eliminada, ¿continuar?`, function() {
+                        ui.mostrarConfirmacionModal('Aviso', `La reserva será eliminada, ¿continuar?`, function() {
                             const searchParams = new URLSearchParams({ id: id });
                             window.location.assign('eliminar?'+searchParams.toString());
                         });
