Refactorización func Usuarios, modificaciones func Alojamientos y avances en func Reservas

--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -22,6 +22,10 @@
 	<!-- @popperjs/core Librería necesaria para posicionar popups. Esencial para Tempus Dominus v6 para posicionar el datePicker. -->
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
 
+	<!-- Leaflet -->
+	<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+
+
 </th:block>
 
 </body>
