--- a/src/main/resources/templates/fragments/styles.html
+++ b/src/main/resources/templates/fragments/styles.html
@@ -21,6 +21,10 @@
 	<!-- Estilos Gestor de Alojamientos -->
 	<link th:href="@{/css/gestor.css}" rel="stylesheet" />
 
+	<!-- Leaflet -->
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+
+
 </th:block>
 	
 </body>
