--- a/src/main/resources/templates/gestion/alojamientos/detalle.html
+++ b/src/main/resources/templates/gestion/alojamientos/detalle.html
@@ -33,10 +33,24 @@
                     </div>
 
                     <div class="mb-3 row">
-                        <label for="login" class="col-sm-2 col-form-label">Dirección <span class="text-danger">*</span></label>
+                        <label for="direccion" class="col-sm-2 col-form-label">Dirección <span class="text-danger">*</span></label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="direccion" th:field="*{direccion}" th:errorclass="is-invalid" />
                             <small th:if="${#fields.hasErrors('direccion')}" th:errors="*{direccion}" th:errorclass="text-danger"></small>
+                        </div>
+                    </div>
+
+                    <div class="mb-3 row">
+                        <label class="col-sm-2 col-form-label">Ubicación en mapa</label>
+                        <div class="col-sm-10">
+                            <div id="map" style="height: 300px;"></div>
+                        </div>
+                    </div>
+
+                    <div class="mb-3 row">
+                        <label class="col-sm-2 col-form-label">Capacidad (nº de personas)</label>
+                        <div class="col-sm-4">
+                            <input id="capacidadInput" type="number" min="1" class="form-control" th:field="*{capacidad}"/>
                         </div>
                     </div>
 
@@ -66,10 +80,9 @@
                     </div>
 
                     <div class="mb-3 row">
-                        <label for="login" class="col-sm-2 col-form-label">Tarifa Base <span class="text-danger">*</span></label>
-                        <div class="col-sm-10">
-                            <input class="form-control" id="tarifaBase" th:field="*{tarifaBase}" rows="4" th:errorclass="is-invalid"/>
-                            <small th:if="${#fields.hasErrors('tarifaBase')}" th:errors="*{tarifaBase}" th:errorclass="text-danger"></small>
+                        <label class="col-sm-2 col-form-label">Tarifa Base (€)</label>
+                        <div class="col-sm-4">
+                            <input id="tarifaBaseInput" type="text" class="form-control" th:field="*{tarifaBase}"/>
                         </div>
                     </div>
 
@@ -111,24 +124,8 @@
 
     <div th:replace="~{fragments/menu :: pie}"></div>
 
-    <script>
-        function previewImage(event) {
-            const input = event.target;
-            const preview = document.getElementById('preview');
-
-            if (input.files && input.files[0]) {
-                const reader = new FileReader();
-                reader.onload = function(e) {
-                    preview.src = e.target.result;   // Asigna la imagen seleccionada
-                    preview.style.display = 'block'; // La hace visible
-                }
-                reader.readAsDataURL(input.files[0]);
-            } else {
-                preview.src = '';
-                preview.style.display = 'none'; // Oculta si no hay archivo
-            }
-        }
-    </script>
+    <th:block th:replace="~{fragments/scripts :: scripts}"></th:block>
+    <script th:src="@{/js/gestion/alojamientos/detalle.js}"></script>
         
 </body>
 </html>
