Cambios en gestión de reservas (Pendiente: solucionar fechas ocupadas en rojo)

--- a/src/main/resources/static/css/gestor.css
+++ b/src/main/resources/static/css/gestor.css
@@ -11,3 +11,8 @@
     border: 1px solid #ccc;
     margin-bottom: 20px;
   }
+
+.fecha-ocupada {
+    background-color: red !important;
+    color: white !important;
+}
