Funcionalidad de reservas completa a falta de pruebas específicas.

--- a/src/main/resources/static/css/gestor.css
+++ b/src/main/resources/static/css/gestor.css
@@ -16,3 +16,8 @@
     background-color: red !important;
     color: white !important;
 }
+
+#tablaReservas td:not(:last-child),
+#tablaReservas th:not(:last-child) {
+    text-align: left !important;
+}
