--- a/src/main/resources/static/css/gestor.css
+++ b/src/main/resources/static/css/gestor.css
@@ -21,3 +21,33 @@
 #tablaReservas th:not(:last-child) {
     text-align: left !important;
 }
+
+.leaflet-popup-content .btn {
+    color: #fff; /* texto blanco */
+    background-color: #198754; /* verde "success" */
+    border-color: #198754;
+    display: inline-block;
+    padding: 0.375rem 0.75rem;
+    font-size: 0.875rem;
+    text-align: center;
+    text-decoration: none;
+    line-height: 1.5;
+    border-radius: 0.375rem;
+    cursor: pointer;
+}
+
+.leaflet-popup-content .btn:hover {
+    background-color: #157347; /* verde más oscuro para hover */
+    border-color: #146c43;
+    color: #fff;
+}
+
+.btn-verde {
+    background-color: #28a745; /* verde del popup */
+    color: white;
+    border: none;
+}
+
+.btn-verde:hover {
+    background-color: #218838; /* verde más oscuro al pasar el mouse */
+}
