Pendiente terminar creacion clientes.

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -6,6 +6,7 @@
 
 <body>
     <section class="container">
+        <div th:replace="~{fragments/mensajes :: mensajes-alerta (mensajeUsuario=${mensajeUsuario})}"></div>
         <div class="row align-items-center vh-100">
 
             <div class="card border-light-subtle shadow-sm g-0">
