--- a/src/main/resources/templates/gestion/usuarios/detalle.html
+++ b/src/main/resources/templates/gestion/usuarios/detalle.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
 	<th:block th:replace="~{fragments/head :: head ('Usuario')}"></th:block>
 </head>
@@ -24,7 +24,7 @@
 
                     <input type="hidden" name="id" th:field="*{id}" />
 
-                    <div class="mb-3 row">
+                    <div class="mb-3 row"  sec:authorize="hasAnyRole('ADMIN','PROPIETARIO')">
                         <label for="login" class="col-sm-2 col-form-label">Permisos <span class="text-danger">*</span></label>
                         <div class="col-sm-10">
                             <select class="form-control" id="rol" th:field="*{rol}" th:errorclass="is-invalid">
