--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -64,12 +64,12 @@
 						</a>
 						<ul class="dropdown-menu dropdown-menu-end">
 							<li>
-								<a class="dropdown-item" th:href="@{/logout}">
+								<a class="dropdown-item" th:href="@{/gestion/usuarios/perfil}">
 									<i class="fa-solid fa-user-circle"></i> Mi Perfil
 								</a>
 							</li>
 							<li>
-								<a class="dropdown-item" th:href="@{/logout}">
+								<a class="dropdown-item" th:href="@{/gestion/reservas/lista}">
 									<i class="fa-solid fa-calendar-check"></i> Mis reservas
 								</a>
 							</li>
