--- a/src/main/resources/templates/gestion/usuarios/lista.html
+++ b/src/main/resources/templates/gestion/usuarios/lista.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
 	<th:block th:replace="~{fragments/head :: head ('Usuarios')}"></th:block>
 </head>
